HelloUltraviolet/Fixtures/RejectedSource/Names/InternalAccess/Source/InternalProvider/Library.uv
//! Dependency assembly fixture for internal visibility diagnostics.

internal procedure internalProviderValue() -> i32 {
    return 11
}
